feat: Add @PreAuthorize annotations to all controllers
- Added @PreAuthorize at class level to 64 controller classes
- Admin-only controllers: RoleController, AuditController, AdminCategoryController, JobServiceController, IntegrationConfigController
- ADMIN + PROJECT_MANAGER controllers: EpsController, ObsController, WbsController, ContractController, ProcurementPlanController, TenderController, DocumentController, DocumentFolderController, TransmittalController, RfiRegisterController, DrawingRegisterController, BaselineController, WbsTemplateController, CorridorCodeController, BidSubmissionController, ContractMilestoneController, PerformanceBondController, VariationOrderController, and others
- ADMIN + PROJECT_MANAGER + SCHEDULER controllers: ActivityController, RelationshipController, ScheduleController, ScheduleHealthController, PertEstimateController, ScenarioController, ScheduleCompressionController
- ADMIN + PROJECT_MANAGER + COST_ENGINEER controllers: CostController, EvmController
- ADMIN + PROJECT_MANAGER + VIEWER controllers: ResourceController, ResourceAssignmentController, CalendarController, DashboardController, RiskController, PortfolioController, ProjectController, ReportController
- Moved @PreAuthorize from method level to class level where needed
- Added missing import statements where required